# SIMS-Forsakringskassan

./: LICENSE  README.md  config.py  embeddings.py  streamlit_test.py
RAGSystem/: .gitignore  RAG.SLN  RAG.pyproj  README.md  llm.py  loader.py  main.py  pyproject.toml  rag.py
src/: requirements.txt  run_rag_test.py
src/compliance_checker/graph/: compile_graph.py  state.py
src/compliance_checker/graph/nodes/: claim_extractor.py  compliance_report.py  evidence_checker.py  root_cause_classifier.py
src/compliance_checker/model/: llm.py
src/compliance_checker/parser/: claim_parser.py
src/compliance_checker/prompt/: prompt_loader.py
src/compliance_checker/services/: results_db_client.py  vector_db_client.py
src/rag_system/graph/: compile_graph.py  state.py
src/rag_system/graph/edges/: edges.py
src/rag_system/graph/nodes/: generate.py  ingest.py  retrieve.py
src/rag_system/model/: llm.py
src/rag_system/parser/: pdf_parser.py
src/rag_system/prompt/: prompt_loader.py
src/rag_system/services/: result_store.py  vector_db_qdrant.py
src/shared/: config.py  temp_db_interactions.py
src/shared/data/: rag_results.db
src/shared/services/: embedding_service.py
